Fix to align the application bar

--- a/apps/store/themes/store/css/custom.css
+++ b/apps/store/themes/store/css/custom.css
@@ -228,7 +228,7 @@ div.asset-well div.advanced-search-form-container h1{
 
 .wr-app-bar {
     background: #237bd5;
-    height: 54px;
+    height: 40px;
     position: relative;
 }
 
